--- a/consistency/example.ipynb
+++ b/consistency/example.ipynb
@@ -7,9 +7,9 @@
     "import tensorflow as tf \n",
     "import numpy as np\n",
     "\n",
-    "from attack import IterativeSearch\n",
-    "from attack import PGDsL2\n",
-    "from attack import StableNeighborSearch\n",
+    "from consistency import IterativeSearch\n",
+    "from consistency import PGDsL2\n",
+    "from consistency import StableNeighborSearch\n",
     "\n",
     "from utils import load_dataset\n",
     "from utils import invalidation\n",
@@ -93,7 +93,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "14/14 [==============================] - 0s 691us/step - loss: 0.1555 - sparse_categorical_accuracy: 0.9733\n"
+      "14/14 [==============================] - 0s 737us/step - loss: 0.1240 - sparse_categorical_accuracy: 0.9762\n"
      ]
     }
    ],
@@ -111,122 +111,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "14/14 [==============================] - 0s 721us/step - loss: 0.2165 - sparse_categorical_accuracy: 0.9728\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Counterfactual Search"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "L1_iter_search = IterativeSearch(baseline_model,\n",
-    "                                clamp=[X_train.min(), X_train.max()],\n",
-    "                                num_classes=2,\n",
-    "                                eps=0.3,\n",
-    "                                nb_iters=40,\n",
-    "                                eps_iter=0.01,\n",
-    "                                norm=1)\n",
-    "                                \n",
-    "l1_cf, pred_cf, is_valid = L1_iter_search(X_test[:128])\n",
-    "iv = invalidation(l1_cf,\n",
-    "                np.argmax(baseline_model.predict(X_test[:128]), axis=1),\n",
-    "                model_1,\n",
-    "                affinity_set=[[0], [1]])\n",
-    "\n",
-    "print(f\"Invalidation Rate: {iv}\")"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "WARNING:tensorflow:Calling GradientTape.gradient on a persistent tape inside its context is significantly less efficient than calling it outside the context (it causes the gradient ops to be recorded on the tape, leading to increased CPU and memory usage). Only call GradientTape.gradient inside the context if you actually want to trace the gradient in order to compute higher order derivatives.\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'IterativeSearch' object has no attribute 'rns_fn'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-60ea09cb0de1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m                                 norm=1)\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0ml1_cf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred_cf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_valid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL1_iter_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m iv = invalidation(l1_cf,\n\u001b[1;32m     11\u001b[0m                 \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaseline_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/consistency/consistency/attack/attack_methods.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, x, original_pred_sparse, batch_size, **kwargs)\u001b[0m\n\u001b[1;32m     44\u001b[0m                                              **kwargs)\n\u001b[1;32m     45\u001b[0m         \u001b[0;31m# Run SNS search\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrns_fn\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m             \u001b[0mx_adv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrns_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_adv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'IterativeSearch' object has no attribute 'rns_fn'"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "L2_iter_search = IterativeSearch(baseline_model,\n",
-    "                                clamp=[X_train.min(), X_train.max()],\n",
-    "                                num_classes=2,\n",
-    "                                eps=0.3,\n",
-    "                                nb_iters=40,\n",
-    "                                eps_iter=0.01,\n",
-    "                                norm=2)\n",
-    "l2_cf, pred_cf, is_valid = L2_iter_search(X_test[:128])\n",
-    "\n",
-    "iv  = invalidation(l2_cf,\n",
-    "                np.argmax(baseline_model.predict(X_test[:128]), axis=1),\n",
-    "                model_1,\n",
-    "                affinity_set=[[0], [1]])\n",
-    "\n",
-    "print(f\"Invalidation Rate: {iv}\")"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Invalidation Rate: (0.0,)\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "pgd_iter_search = PGDsL2(baseline_model,\n",
-    "                        clamp=[X_train.min(), X_train.max()],\n",
-    "                        num_classes=2,\n",
-    "                        eps=2.0,\n",
-    "                        nb_iters=100,\n",
-    "                        eps_iter=0.04)\n",
-    "pgd_cf, pred_cf, is_valid = pgd_iter_search(X_test[:128], num_interpolations=10, batch_size=64)\n",
-    "\n",
-    "iv = invalidation(pgd_cf,\n",
-    "                np.argmax(baseline_model.predict(X_test[:128]), axis=1),\n",
-    "                model_1,\n",
-    "                batch_size=32,\n",
-    "                affinity_set=[[0], [1]])\n",
-    "\n",
-    "print(f\"Invalidation Rate: {iv}\")"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "WARNING:tensorflow:From /home/zifanw/miniconda3/envs/tf2/lib/python3.8/site-packages/foolbox/models/tensorflow.py:13: is_gpu_available (from tensorflow.python.framework.test_util) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `tf.config.list_physical_devices('GPU')` instead.\n",
-      "Invalidation Rate: (0.0,)\n"
+      "14/14 [==============================] - 0s 697us/step - loss: 0.1947 - sparse_categorical_accuracy: 0.9730\n"
      ]
     }
    ],
@@ -241,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
     "sns_fn = StableNeighborSearch(baseline_model,\n",
     "                 clamp=[X_train.min(), X_train.max()],\n",
@@ -256,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
     "L1_iter_search = IterativeSearch(baseline_model,\n",
     "                                clamp=[X_train.min(), X_train.max()],\n",
@@ -277,16 +162,77 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'StableNeighborSearch' object has no attribute 'sns_nb_iter'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-084de9140b3a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m                                 rns_fn=rns_fn)\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0ml1_cf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred_cf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_valid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL1_iter_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m iv = invalidation(l1_cf,\n\u001b[1;32m     12\u001b[0m                 \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaseline_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/consistency/consistency/attack/attack_methods.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, x, original_pred_sparse, batch_size, **kwargs)\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0;31m# Run SNS search\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrns_fn\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m             \u001b[0mx_adv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrns_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_adv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;31m# 2. check if counterfactual is adversarial\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/consistency/consistency/attack/attack_methods.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     97\u001b[0m             \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m             \u001b[0mn_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_interpolations\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m             \u001b[0mmax_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msns_nb_iter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m             \u001b[0madv_epsilon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msns_eps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m             adv_step_size=self.sns_eps_iter)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'StableNeighborSearch' object has no attribute 'sns_nb_iter'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3/3 [==============================] - 4s 1s/step\n",
+      "Invalidation Rate: (0.0,)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "L2_iter_search = IterativeSearch(baseline_model,\n",
+    "                                clamp=[X_train.min(), X_train.max()],\n",
+    "                                num_classes=2,\n",
+    "                                eps=0.3,\n",
+    "                                nb_iters=40,\n",
+    "                                eps_iter=0.01,\n",
+    "                                norm=2,\n",
+    "                                sns_fn=sns_fn)\n",
+    "l2_cf, pred_cf, is_valid = L2_iter_search(X_test[:128])\n",
+    "\n",
+    "iv  = invalidation(l2_cf,\n",
+    "                np.argmax(baseline_model.predict(X_test[:128]), axis=1),\n",
+    "                model_1,\n",
+    "                affinity_set=[[0], [1]])\n",
+    "\n",
+    "print(f\"Invalidation Rate: {iv}\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4/4 [==============================] - 4s 981ms/step\n",
+      "Invalidation Rate: (0.0,)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "pgd_iter_search = PGDsL2(baseline_model,\n",
+    "                        clamp=[X_train.min(), X_train.max()],\n",
+    "                        num_classes=2,\n",
+    "                        eps=2.0,\n",
+    "                        nb_iters=100,\n",
+    "                        eps_iter=0.04,\n",
+    "                        sns_fn=sns_fn)\n",
+    "pgd_cf, pred_cf, is_valid = pgd_iter_search(X_test[:128], num_interpolations=10, batch_size=64)\n",
+    "\n",
+    "iv = invalidation(pgd_cf,\n",
+    "                np.argmax(baseline_model.predict(X_test[:128]), axis=1),\n",
+    "                model_1,\n",
+    "                batch_size=32,\n",
+    "                affinity_set=[[0], [1]])\n",
+    "\n",
+    "print(f\"Invalidation Rate: {iv}\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "111/111 [==============================] - 18s 164ms/step\n",
+      "Invalidation Rate: (0.0,)\n"
      ]
     }
    ],
